kustomize/db2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2
  namespace: project-plato  # Replace <your-namespace> with the actual namespace name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2
  template:
    metadata:
      labels:
        app: db2
    spec:
      containers:
      - name: nginx
        image: nginx:1.16.1-alpine
        resources:
         requests:
           memory: "64Mi"
           cpu: "250m"
         limits:
           memory: "128Mi"
           cpu: "500m"
        ports:
        - containerPort: 80
