kustomize/db1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db1-service
  namespace: project-plato  # Replace <your-namespace> with the actual namespace
  labels:
    app: db1
spec:
  type: NodePort
  selector:
    app: db1
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 80
      nodePort: 30007
