kustomize/db2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db2-service
  namespace: project-plato
  labels:
    app: db2
spec:
  ports:
  - port: 5432
    targetPort: 80
    protocol: TCP
  selector:
    app: db2
